# Programming_Rust

./: .gitignore  BOOKMARK.md  README.md  touchnote.sh
chapt01/: NOTE01.md
chapt02/: NOTE02.md  gcd
chapt02/quickreplace/: command.sh
chapt03/: NOTE03.md
chapt03/arrays_vec_slices/: Cargo.toml
chapt03/fixed_width_Numeric_demo/: Cargo.toml
chapt03/operation_overflow/: Cargo.toml
chapt04/Rc_Arc_Shared_Ownership/: Cargo.toml
chapt04/moves_demo/: Cargo.toml
chapt05/: NOTE05.md
chapt05/references_function/: Cargo.toml
chapt05/references_to_values/: Cargo.toml
chapt05/sharing_vs_mutation/: Cargo.toml
chapt05/working_with_references/: Cargo.toml
chapt06/control_flow_in_loops/: Cargo.toml
chapt08/: NOTE.md  NOTE08.md
chapt09/: NOTE09.md
chapt10/: NOTE10.md  binary-tree
chapt11/: NOTE11.md
chapt12/: NOTE12.md  complex  interval
chapt13/: NOTE13.md
chapt14/: NOTE14.md  basic-router
chapt15/: NOTE15.md
chapt16/: NOTE16.md
chapt17/: NOTE17.md
chapt18/: NOTE18.md  copy  echo-server  grep  http-get
chapt19/: NOTE19.md
chapt20/: NOTE20.md  block-on  cheapo-request  many-requests  many-requests-surf  spawn-blocking
chapt20/building_async_func_from_async_blocks/: Cargo.toml
chapt20/building_async_func_from_async_blocks/src/: main.rs
chapt20/spawning_async_tasks/: Cargo.toml
chapt20/spawning_async_tasks/src/: main.rs
chapt20/spawning_async_tasks_on_a_thread_pool/: Cargo.toml
chapt20/spawning_async_tasks_on_a_thread_pool/src/: main.rs
chapt20/spawning_async_tasks_on_a_thread_pool0/: Cargo.toml
chapt20/spawning_async_tasks_on_a_thread_pool0/src/: main.rs
chapt21/: NOTE21.md  json-macro  trace_example.rs
chapt22/: NOTE22.md  ascii  crash.c  crash.out  gap-buffer  ref-with-flag
chapt23/: NOTE23.md  libgit2  libgit2-rs  libgit2-rs-safe
(+243 files in other folders)
