[package]
name = "spawning_async_tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need the 'unstable' feature to get 'spawn_local'.
async-std = { version = "1.0", features = ["unstable"] }
